flux/apps/kitchenowl.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: kitchenowl-listenerset-to-kitchenowl-tls
  namespace: envoy-gateway-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      namespace: default
  to:
    - group: ""
      kind: Secret
      name: kitchenowl-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kitchenowl-http-redirect
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - kitchenowl.${SERVICE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
