flux/apps/unifi.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: unifi
      namespace: default
      sectionName: https
  hostnames:
    - unifi.${SERVICE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: unifi-tls-backend
